<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="app_tag_line">Get weather info with superior accuracy</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- dummy text -->
    <!--<string name="dpi">\u0020dpi</string>-->
    <string name="dummy_location_text">Sunday, December 22</string>
    <string name="temperature_avg">25\u00B0</string>
    <string name="temperature_low">\u00B0low</string>
    <string name="temperature_high">\u00B0high</string>
    <string name="temperature_min_max">25\u00B0/35\u00B0</string>
    <string name="temp_degree_sign">\u00B0</string>
    <string name="rain_perception">55%</string>
    <string name="humidity">35%</string>
    <string name="wind">\u0020m/s</string>
    <string name="direction">SW</string>
    <string name="precipitation">precipitation</string>
    <string name="humidity_label">humidity</string>
    <string name="wind_label">wind</string>
    <string name="direction_label">direction</string>
    <string name="direction_abbreviations_label">Direction abbreviations</string>
    <string name="Location_enable_label">Direction abbreviations</string>

    <!-- Side menu text -->
    <string name="location_search">Location Search</string>
    <string name="speech_prompt">Weather Forecast\n Try saying something</string>
    <string name="speech_not_supported">Speech not supported</string>
    <string name="recent_search">Recent search</string>
    <string name="clear_search">Clear search</string>

    <!-- Setting menu screen -->
    <string name="unit_format">UNIT \u0026 FORMAT</string>
    <string name="temperature_label">Temperature</string>
    <string name="speed_label">Speed</string>
    <string name="air_pressure_label">Air Pressure</string>
    <string name="distance_label">Distance</string>
    <string name="theme_label">Theme</string>
    <string name="time_format">Time Format</string>
    <string name="date_format">Date Format</string>
    <string name="rain_fall">Rain Fall</string>
    <string name="on_going_notification">On-going Notification</string>
    <string name="c_symbol">\u00B0C</string>
    <string name="f_symbol">\u00B0F</string>
    <string name="ms_speed">\u0020m/s</string>
    <string name="kmh_speed">\u0020km/h</string>
    <string name="mph_speed">\u0020MPH</string>
    <string name="hpa_air_pressure">\u0020hPa</string>
    <string name="mmhg_air_pressure">mm/Hg</string>
    <string name="inhg_air_pressure">\u0020in/Hg</string>
    <string name="km_distance">KM</string>
    <string name="mi_distance">MI</string>
    <string name="day">Day</string>
    <string name="night">Night</string>
    <string name="twelve_hour">12 Hour</string>
    <string name="twenty_four_hour">24 Hour</string>
    <string name="notification_on">On</string>
    <string name="notification_off">Off</string>
    <string name="date_dd_mm">DD/MM</string>
    <string name="date_mm_dd">MM/DD</string>
    <string name="advance_setting">ADVANCE SETTING</string>
    <string name="about">About US</string>
    <string name="rate_us">Rate us</string>
    <string name="weather_data_provider">Weather data provider</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="try_other_apps">Check other apps</string>

    <!-- Api Error message -->
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="server_not_responding">Server not responding.</string>
    <string name="server_timeout_error">Server timeout error.</string>
    <string name="something_went_wrong">Something went wrong</string>

    <!-- Wind Direction -->
    <string name="n">N</string>
    <string name="n_desc">- North direction</string>
    <string name="nne">NNE</string>
    <string name="nne_desc">- North North-East direction</string>
    <string name="ne">NE</string>
    <string name="ne_desc">- North-East direction</string>
    <string name="ene">ENE</string>
    <string name="ene_desc">- East North-East direction</string>
    <string name="e">E</string>
    <string name="e_desc">- East direction</string>
    <string name="ese">ESE</string>
    <string name="ese_desc">- East South-East direction</string>
    <string name="se">SE</string>
    <string name="se_desc">- South-East direction</string>
    <string name="sse">SSE</string>
    <string name="sse_desc">- South South-East direction</string>
    <string name="s">S</string>
    <string name="s_desc">- South direction</string>
    <string name="ssw">SSW</string>
    <string name="ssw_desc">- South South-West direction</string>
    <string name="sw">SW</string>
    <string name="sw_desc">- South-West direction</string>
    <string name="wsw">WSW</string>
    <string name="wsw_desc">- West South-West direction</string>
    <string name="w">W</string>
    <string name="w_desc">- West direction</string>
    <string name="wnw">WNW</string>
    <string name="wnw_desc">- West North-West direction</string>
    <string name="nw">NW</string>
    <string name="nw_desc">- North-West direction</string>
    <string name="nnw">NNW</string>
    <string name="nnw_desc">- North North-West direction</string>
    <string name="direction_desc">Here, you know about abbreviations of direction label.</string>

    <string name="pressure_label">Pressure</string>
    <string name="sealevel_label">Sea-Level</string>
    <string name="ground_level">Ground-Level</string>
    <string name="rain_volume">Rain volume</string>
    <string name="system_pod">System pod</string>
    <string name="close">Close</string>

    <!-- Location alert dialog -->
    <string name="gps_alert_title">GPS is not enabled</string>
    <string name="gps_alert_message">This app required GPS to get the weather information. Do you want to enable GPS?</string>

    <!-- Empty location view -->
    <string name="search_your_location">Search your location</string>
    <string name="search_your_location_desc">Search and get real time weather information of your location.</string>
    <string name="search_location_button">Search Location</string>

    <!-- Clear data dialog -->
    <string name="attention">Attention</string>
    <string name="clear_data_dialog_heading">Are you sure want to clear search history?</string>

    <!-- About -->
    <string name="version">Version</string>
    <string name="a_quixom_product">A QUIXOM product</string>
    <string name="about_app_short_desc">Weather Forecast is your pocket weather guide irrespective of your location!</string>
    <string name="developer_info">Developer Information!</string>
    <string name="dev_info">This app has been developed by Quixom Technology. Quixom is a mobile and web app development company oriented towards design thinking approach to mobile app development. Quixom has delivered apps for its customers all over the globe in sectors like gaming, delivery, ecommerce, IOT and many others. To get a free quote, email your requirements to info@quixom.com</string>
    <string name="company_phone">+91 7567751959</string>
    <string name="address">Quixom Tech \nB-12, Galaxy Signature \nOpp Sukhan Bungalows
\nScience City Road, Ahmedabad</string>
    <string name="website">www.quixom.com</string>

    <!-- Widgets text -->
    <string name="no_data_found">No Data</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
</resources>
