<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/font_white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/rich_blue">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:src="@drawable/ic_info_outline" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/direction_abbreviations_label"
        android:textColor="@color/font_primary"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/direction_desc"
        android:textColor="@color/font_thirdly" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/n"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/n_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/nne"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/nne_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/ne"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/ne_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/ene"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/ene_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/e"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/e_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/ese"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/ese_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/se"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/se_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/sse"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/sse_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/s"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/s_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/ssw"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/ssw_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/sw"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/sw_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/wsw"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/wsw_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/w"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/w_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/wnw"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/wnw_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/nw"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/nw_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_bold"
                    android:text="@string/nnw"
                    android:textColor="@color/rich_blue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/nnw_desc"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp" />

            </TableRow>
        </TableLayout>
    </ScrollView>
</LinearLayout>