<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llParentAboutApp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    tools:context="com.quixom.apps.weatherstream.fragments.AboutAppFragment">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:orientation="vertical"
        tools:ignore="UnusedAttribute">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_app_ic" />

        <TextView
            android:id="@+id/tvAppNameAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/lato_black"
            android:text="@string/app_name"
            android:textColor="@color/font_primary"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:id="@+id/tvVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/lato_regular"
            android:text="@string/version"
            android:textColor="@color/font_secondary"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            android:textAllCaps="true"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="1px"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@color/font_primary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato_light"
            android:gravity="start"
            android:text="@string/about_app_short_desc"
            android:textAlignment="center"
            android:textColor="@color/font_secondary"
            android:textSize="12sp" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardUseCompatPadding="true"
        android:layout_margin="5dp">

        <ScrollView
            android:id="@+id/svDeveloperInformation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_background"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDeveloperInfoTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/lato_bold"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/developer_info"
                    android:textColor="@color/font_primary"
                    android:textSize="16sp"
                    tools:ignore="MissingPrefix,RtlHardcoded"
                    tools:targetApi="m" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/dev_info"
                    android:textColor="@color/font_secondary"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded"
                    tools:targetApi="m" />

                <TextView
                    android:id="@+id/tvCall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/colorPrimary"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="@string/company_phone"
                    android:textColor="@color/font_primary"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded"
                    tools:targetApi="m" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/dark_gray_trans" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/colorPrimary"
                    android:fontFamily="@font/lato_regular"
                    android:padding="10dp"
                    android:text="@string/address"
                    android:textColor="@color/font_primary"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded"
                    tools:targetApi="m" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/dark_gray_trans" />

                <TextView
                    android:id="@+id/tvWebsite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableTint="@color/colorPrimary"
                    android:fontFamily="@font/lato_regular"
                    android:padding="10dp"
                    android:text="@string/website"
                    android:textColor="@color/font_primary"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded"
                    tools:targetApi="m" />

            </LinearLayout>
        </ScrollView>

    </android.support.v7.widget.CardView>
</LinearLayout>
